# qr_decoder

./: CMakeLists.txt  README.md  package.xml  plugins.xml
include/: QRDecode.h
launch/: QRDecode.launch
src/: .QRDecode.cpp.swp  QRDecode.cpp
tmux_scripts/: .tmux.sh.swp  tmux.sh
