<?xml version="1.0"?>
<package format="2">

  <name>qr_code_decode</name>
  <version>0.0.1</version>
  <description>QRcode Decoder</description>

  <maintainer email="jorge.luiz.henri@hotmail.com">wagner</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>mrs_lib</depend>
  <depend>mrs_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>

  <export>
    <!-- The plugins.xml file defines nodelet as a plugin -->
    <nodelet plugin="${prefix}/plugins.xml" />

  </export>

</package>
